--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <link
+      rel="preload"
+      as="font"
+      href="./src/assets/fonts/p052/p052-bold.woff2"
+      type="font/woff2"
+      crossorigin="anonymous"
+    >
+
+    <link
+      rel="preload"
+      as="font"
+      href="./src/assets/fonts/Lato/Lato-Regular.woff2"
+      type="font/woff2"
+      crossorigin="anonymous"
+    >
   </head>
   <body>
     <div id="app"></div>
